added xbt informational website

--- a/bitcoin.html
+++ b/bitcoin.html
@@ -512,6 +512,7 @@
             <li><a href="http://woobull.com/" target="_blank">Willy Woo</a></li>
             <li><a href="https://laanwj.github.io/" target="_blank">Wladimir van der Laan</a></li>
             <li><a href="http://startupmanagement.org/blog/" target="_blank">William Mougayar</a></li>
+            <li><a href="https://www.xbt.net/" target="_blank">Bitcoin and Cryptocurrency Guides</a></li>
           </ul>
           <br>
           <h3>Buying Bitcoins:</h3>
